when encoding RouteOptions to URL use UTF-8